--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2018"
 primitive-types = "0.4"
 blockchain = "0.8"
 blockchain-network-simple = "0.4"
-bm-le = "0.6"
-bm = "0.5"
+bm-le = { version = "0.8", features = ["with-codec", "with-serde"] }
+bm = "0.8"
 sha3 = "0.8"
 clap = "2.33"
 schnorrkel = "0.6"
