Add solri-engine to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ clap = "2.33"
 schnorrkel = "0.6"
 rand = "0.6"
 parity-codec = { version = "4.1", features = ["derive"] }
+
+[workspace]
+members = [
+	"engine",
+]
