--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ rust:
   - stable
 cache: cargo
 before_script:
+  - sudo apt-get install -y wabt
   - rustup target add wasm32-unknown-unknown
+addons:
+  apt:
+    update: true
 script:
   - cargo build --verbose --all
   - cargo test --verbose --all
