Init a simple cli tool for runtime

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ parity-codec = { version = "4.1", features = ["derive"] }
 members = [
 	"engine",
 	"runtime",
+	"runtime/cli",
 	"metadata",
 ]
 exclude = [
