Add test for engine and add all basic structures for runtime

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 [dependencies]
 wasmi = "0.5.0"
 metadata = { package = "solri-metadata", path = "../metadata" }
+
+[dev-dependencies]
+solri-runtime = { path = "../runtime" }
