--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_script:
   - wget https://github.com/WebAssembly/wabt/releases/download/1.0.11/wabt-1.0.11-linux.tar.gz
   - tar xvf wabt-1.0.11-linux.tar.gz
   - sudo cp wabt-1.0.11/wasm-strip /usr/bin/wasm-strip
-  - rustup target add wasm32-unknown-unknown
+  - rustup install nightly
+  - rustup target add wasm32-unknown-unknown --toolchain nightly
 script:
   - cargo build --verbose --all
   - cargo test --verbose --all
