--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 
 [dependencies]
 wee_alloc = "0.4.4"
+metadata = { package = "solri-metadata", path = "../metadata" }
 
 [features]
 default = ["std"]
