Use bm-le for tree hashing in runtime

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -12,10 +12,11 @@ primitive-types = { version = "0.4", default-features = false, features = ["code
 parity-codec = { version = "4.0", default-features = false, features = ["derive"] }
 blockchain-core = { version = "0.1", default-features = false }
 sha3 = { version = "0.8", default-features = false }
+bm-le = { version = "0.9", default-features = false, features = ["derive"] }
 
 [features]
 default = ["std"]
-std = ["primitive-types/std", "parity-codec/std", "blockchain-core/std", "sha3/std"]
+std = ["primitive-types/std", "parity-codec/std", "blockchain-core/std", "sha3/std", "bm-le/std"]
 
 [build-dependencies]
 wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2", path = "../utils/wasm-builder-runner" }
