Implement generic executor for engine

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2018"
 [dependencies]
 wasmi = "0.5.0"
 metadata = { package = "solri-metadata", path = "../metadata" }
+blockchain = "0.9"
+parity-codec = { version = "4.0", features = ["derive"], optional = true }
+
+[features]
+default = ["parity-codec"]
 
 [dev-dependencies]
 solri-runtime = { path = "../runtime" }
-parity-codec = { version = "4.0", features = ["derive"] }
-blockchain = "0.9"
