--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -8,7 +8,7 @@ build = "build.rs"
 [dependencies]
 wee_alloc = "0.4.4"
 metadata = { package = "solri-metadata", path = "../metadata", default-features = false }
-primitive-types = { version = "0.4", default-features = false, features = ["codec"] }
+primitive-types = { version = "0.4", default-features = false, features = ["codec", "byteorder"] }
 parity-codec = { version = "4.0", default-features = false, features = ["derive"] }
 blockchain-core = { version = "0.1", default-features = false }
 sha3 = { version = "0.8", default-features = false }
