--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 
 [dependencies]
 primitive-types = "0.4"
-blockchain = "0.9"
-blockchain-network-simple = "0.5"
-bm-le = { version = "0.10", features = ["with-codec", "with-serde"] }
-bm = "0.10"
+blockchain = { path = "vendor/blockchain" }
+blockchain-network-simple = { path = "vendor/blockchain/network/simple" }
+bm-le = { path = "vendor/bm/le", features = ["with-codec", "with-serde"] }
+bm = { path = "vendor/bm" }
 sha3 = "0.8"
 clap = "2.33"
 schnorrkel = "0.6"
@@ -32,11 +32,3 @@ exclude = [
 	"utils/wasm-builder-runner",
 	"vendor",
 ]
-
-[patch.crates-io]
-bm = { path = "vendor/bm" }
-bm-le = { path = "vendor/bm/le" }
-bm-le-derive = { path = "vendor/bm/le/derive" }
-blockchain = { path = "vendor/blockchain" }
-blockchain-core = { path = "vendor/blockchain/core" }
-blockchain-network-simple = { path = "vendor/blockchain/network/simple" }
