--- a/revdb/Cargo.toml
+++ b/revdb/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 license = "Apache-2.0"
 
 [dependencies]
+rocksdb = "0.14"
+codec = { package = "parity-scale-codec", version = "1.3" }
