--- a/revdb/Cargo.toml
+++ b/revdb/Cargo.toml
@@ -9,3 +9,6 @@ license = "Apache-2.0"
 [dependencies]
 rocksdb = "0.14"
 codec = { package = "parity-scale-codec", version = "1.3" }
+
+[dev-dependencies]
+tempfile = "3.1"
