Remove vendor structure

--- a/metadata/Cargo.toml
+++ b/metadata/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Wei Tang <hi@that.world>"]
 edition = "2018"
 
 [dependencies]
-blockchain-core = { path = "../vendor/blockchain/core", default-features = false }
+blockchain-core = { path = "../blockchain/core", default-features = false }
 parity-codec = { version = "4.0", default-features = false, features = ["derive"], optional = true }
 
 [features]
