--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2018"
 
 [dependencies]
 primitive-types = "0.4"
-blockchain = { path = "vendor/blockchain" }
-blockchain-network = { path = "vendor/blockchain/network" }
-blockchain-network-libp2p = { path = "vendor/blockchain/network/libp2p" }
-blockchain-network-local = { path = "vendor/blockchain/network/local" }
-bm-le = { path = "vendor/bm/le", features = ["with-codec", "with-serde"] }
-bm = { path = "vendor/bm" }
+blockchain = { path = "blockchain" }
+blockchain-network = { path = "blockchain/network" }
+blockchain-network-libp2p = { path = "blockchain/network/libp2p" }
+blockchain-network-local = { path = "blockchain/network/local" }
+bm-le = { path = "bm/le", features = ["with-codec", "with-serde"] }
+bm = { path = "bm" }
 sha3 = "0.8"
 clap = "2.33"
 schnorrkel = "0.6"
@@ -29,9 +29,13 @@ members = [
 	"runtime/cli",
 	"metadata",
 	"revdb",
+	"blockchain",
+	"blockchain/network",
+	"blockchain/network/libp2p",
+	"blockchain/network/local",
+	"bm",
 ]
 exclude = [
 	"utils/wasm-builder",
 	"utils/wasm-builder-runner",
-	"vendor",
 ]
