--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Submodules
+      run: git submodule update --init --recursive
     - name: Init
       run: |
         rustup update $WASM_BUILD_TOOLCHAIN
